Fix version issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,9 @@ author = svenskithesource
 author_email = 40274381+Svenskithesource@users.noreply.github.com
 license = MIT
 license_files = LICENSE.txt
-long_description = file: README.rst
-long_description_content_type = text/x-rst; charset=UTF-8
+version = 0.0.1
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
 url = https://github.com/Svenskithesource/AntorumBot
 # Add here related links, for example:
 project_urls =
